VP 10.4.0 Changelog
------------------------

- fix missing kicker holes at inclination values close around 0

- added a new column for the image manager to show the raw size in bytes for each image.

- new table extended by a stripped down version of the default table and an updated example table. (thanks BorgDog and Hauntfreaks)

- a selected element can be added/removed to/from a collection via the context menu

- drop target hit event problems fixed

- add additional thickness parameter to (transparent) materials, which interacts with the standard amount (and/or alpha channel of the image) and edge opacity to provide a more natural look

- add (optional) legacy/VP9-like keyboard nudging code, can be enabled in the 'Keys, Nudge and DOF' preferences dialog

- add internal/rudimentary GPU & table element profiling functionality (accessed as usual via the F11 statistics/debug display variants)
  the normal statistics/debug display now features multiple modes, the first mode works as before,
  the second features additional timings for each main rendering block (like timings for Ambient Occlusion, pure rendering of the table elements, playfield reflection, etc),
  the third one shows separate timings for each table element type(s), which is only approximate though, as it can not render the table in exactly the same way

- extend 'Disable Lighting' functionality for HitTarget, Primitive and Wall from simple dis/enable to a blend value 0..1
- add 'Disable Lighting from below' functionality for Primitives (0..1) to optionally disable light coming from below (e.g. from light elements)

- add surround sound options/configurations:
 1) Basic 2CH audio - this should operate exactly as it did before. Forward/rear panning is ignored.
 2) All effects to rear - Moves the table sounds to the back audio channels. This allows one to move the sounds into the cab like one was able before, but without needing a second sound card.