@@ -929,7 +929,7 @@ BEGIN
     LTEXT           "Blink Inter&val",-1,5,40,41,9
 END
 
-IDD_PROPBUMPER_PHYSICS DIALOGEX 0, 0, 125, 61
+IDD_PROPBUMPER_PHYSICS DIALOGEX 0, 0, 125, 75
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -938,7 +938,9 @@ BEGIN
     LTEXT           "&Hit Threshold",-1,7,35,43,8
     EDITTEXT        3,57,33,48,12,ES_AUTOHSCROLL
     CONTROL         "Has &Hit Event",34,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,60,10
-    CONTROL         "Collidable (switchable in script)",111,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,48,115,10
+    CONTROL         "Collidable (switchable in script)",111,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,63,115,10
+    EDITTEXT        112,57,48,48,12,ES_AUTOHSCROLL
+    LTEXT           "Scatter Angle",-1,7,50,48,8
 END
 
 IDD_PROPBUMPER_STATE DIALOGEX 0, 0, 125, 61
@@ -2403,7 +2405,7 @@ BEGIN
 
     IDD_PROPBUMPER_PHYSICS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 52
+        BOTTOMMARGIN, 74
     END
 
     IDD_PROPBUMPER_STATE, DIALOG
