@@ -1,5 +1,6 @@
 VP 10.4.0 Changelog
 ------------------------
+- let user change the scatter angle for bumpers in the editor
 
 - fix missing kicker holes at inclination values close around 0
 
